--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "connected-react-router": "^6.6.1",
     "formik": "^2.1.3",
     "react": "^16.12.0",
     "react-datepicker": "^2.11.0",
