--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^16.12.0",
     "react-hook-form": "^4.8.2",
     "react-loader-spinner": "^3.1.5",
+    "react-normalize": "^0.4.4",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
